Добавить работу с файлами (8 ФЗ) Добавить работу со временем Добавить работу с приоритетом Добавить функциональность пересечений задач Заменить циклы на стримы Дополнить тесты